avoid text overlap

--- a/src/mobile-version/assets/icons/icomoon/style.css
+++ b/src/mobile-version/assets/icons/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?svn6as');
-  src:  url('fonts/icomoon.eot?svn6as#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?svn6as') format('truetype'),
-    url('fonts/icomoon.woff?svn6as') format('woff'),
-    url('fonts/icomoon.svg?svn6as#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?bgkdkf');
+  src:  url('fonts/icomoon.eot?bgkdkf#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?bgkdkf') format('truetype'),
+    url('fonts/icomoon.woff?bgkdkf') format('woff'),
+    url('fonts/icomoon.svg?bgkdkf#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -41,4 +41,7 @@
 }
 .icon-checkmark:before {
   content: "\ea10";
+}
+.icon-arrow-right:before {
+  content: "\ea34";
 }
